# crudForFNW

./: .gitignore  CMakeLists.txt  Main.qml  PaginatedListView.qml  TODO.txt  bdext.sql  main.cpp  nutritionconverter.cpp  nutritionconverter.h  project_dump.txt  resources.qrc
database/: databaseconnection.cpp  databaseconnection.h  databaseinitializer.cpp  databaseinitializer.h
repos/: BaseRepository.cpp  BaseRepository.h  TODO.txt  achievementsrepository.cpp  achievementsrepository.h  consumedrepository.cpp  consumedrepository.h  dailystatisticsrepository.cpp  dailystatisticsrepository.h  emotionsrepository.cpp  emotionsrepository.h  exerciseentriesrepository.cpp  exerciseentriesrepository.h  processjsonresponse.cpp  processjsonresponse.h  productsrepository.cpp  productsrepository.h  recipeingredientsrepository.cpp  recipeingredientsrepository.h  recipesrepository.cpp  recipesrepository.h  usersrepository.cpp  usersrepository.h
services/: BaseService.cpp  BaseService.h  acheivmentsservice.cpp  acheivmentsservice.h  consumedservice.cpp  consumedservice.h  dailystatistics.cpp  dailystatistics.h  dailystatisticsservice.cpp  dailystatisticsservice.h  emotionsservice.cpp  emotionsservice.h  exerciseservice.cpp  exerciseservice.h  processjsonresponse.cpp  processjsonresponse.h  productservice.cpp  productservice.h  recipeservice.cpp  recipeservice.h  usersservice.cpp  usersservice.h
